infrastructure/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring-system
  labels:
    traefik2: "true"
  annotations:
    kubernetes.io/ingress.class: cert
    #traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-dns01-provider: route53
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: grafana.decort.tech
    http:
      paths:
      - path: /cert-placeholder
        backend:
          serviceName: grafana
          servicePort: 80
  tls:
  - hosts:
    - grafana.decort.tech
    secretName: grafana-cert  
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: monitoring-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.decort.tech`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: grafana-security
        #- name: traefik-auth
  tls:
    secretName: grafana-cert
